# lamgamma

./: .gitignore  README.md  index.html  jest.config.js  package-lock.json  package.json
parser/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
parser/bindings/c/: tree-sitter-lamgamma_parser.h  tree-sitter-lamgamma_parser.pc.in
parser/bindings/go/: binding.go  binding_test.go
parser/bindings/node/: binding.cc  index.js
parser/bindings/python/tests/: test_binding.py
parser/bindings/python/tree_sitter_lamgamma_parser/: __init__.py  binding.c
parser/bindings/rust/: build.rs  lib.rs
parser/bindings/swift/TreeSitterLamgammaParserTests/: TreeSitterLamgammaParserTests.swift
parser/old_tests/: 06-fixpoint.txt
parser/src/: a.out.js  grammar.json  node-types.json  parser.c
parser/test/corpus/: 01-arithmetic.txt  01-varaible.txt  02-application.txt  02-boolean.txt  03-function.txt  03-let.txt  04-arithmetic.txt  04-func.txt  05-app.txt  05-boolean  06-letrec.txt  06-staging.txt  07-let.txt  07-quote.txt  08-splice.txt  09-clsabs.txt  50-types.txt  51-clsabs-type.txt  80-classifiers.txt
playground/: .gitignore  index.html  package-lock.json  package.json  rescript.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
playground/public/: tree-sitter-lamgamma_parser.wasm
rescript/: .gitignore  package-lock.json  package.json  rescript.json  todo.md
src/: index.ts  sum.test.ts  term.test.ts  term.ts  variable.ts
ver2/: package.json
(+54 files in other folders)
