[package]
name = "tree-sitter-lamgamma-parser"
description = "parser for lamgamma"
version = "0.1.0"
authors = ["Yuito Murase <yuito@acupof.coffee>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "lamgamma-parser"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/zeptometer/lamgamma"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.7"
